fixed z-index for modal in logs-viewer

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,3 +101,7 @@ span.react-datepicker__navigation-icon {
   margin: 0.4rem !important;
   text-align: center !important;
 }
+
+.ReactModalPortal {
+  z-index: 10000;
+}
